src/test/ui/did_you_mean/issue-39544.stderr
error: cannot borrow immutable field `z.x` as mutable
  --> $DIR/issue-39544.rs:21:18
   |
20 |     let z = Z { x: X::Y };
   |         - this should be `mut`
21 |     let _ = &mut z.x;
   |                  ^^^

error: aborting due to previous error

